fix for out of spec code

--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
   <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
   <meta name="description" content="SJSU Robotics list of photo galleries and publications showing previous events that were participated in by members of the club.">
 
-  <meta http-equiv='content-language' content='en-us'>
+  <meta http-equiv="content-language" content="en-us">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
@@ -239,7 +239,6 @@
       </div>
 
     </div>
-    </div>
   </section>
   <!-- ======= End Gallery Section ======= -->
 
@@ -281,7 +280,7 @@
   <!-- ======= End Footer ======= -->
 
   <a href="#" class="back-to-top"><i class="icofont-arrow-up"></i></a>
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
