--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>SJSU Robotics</title>
 
   <!-- Metadata-->
-  <meta http-equiv='content-language' content='en-us'>
+  <meta http-equiv="content-language" content="en-us">
   <link href="https://www.sjsurobotics.org" rel="canonical" />
   <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
   <meta name="description" content="The San Jose State University Robotics Team is a student-driven multi-discipline team working to apply academic knowledge into practical skills through robot design.">
@@ -126,7 +126,7 @@
       </div>
     </div>
     <video autoplay loop muted id="video" class="hidden-xs hidden-sm" style="position: absolute; z-index: -1; left:0px; bottom:0px; min-width:100%; min-height:100%; text-align:center;">
-      <source src="assets/video/Robotics-Header-Video-2016.webm" type='video/webm'>
+      <source src="assets/video/Robotics-Header-Video-2016.webm" type="video/webm">
       Your browser does not support the <code>video</code> element.
     </video>
   </section>
@@ -476,7 +476,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up"">
+      <div class="container" data-aos="fade-up">
 
     <div class=" section-title">
         <style>
@@ -571,7 +571,7 @@
   <!-- ======= End Footer ======= -->
 
   <a href="#" class="back-to-top"><i class="icofont-arrow-up"></i></a>
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
