--- a/pastLeads.html
+++ b/pastLeads.html
@@ -8,7 +8,7 @@
     <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
     <meta name="description" content="List of members who were previously in positions of Leadership in SJSU Robotics.">
 
-    <meta http-equiv='content-language' content='en-us'>
+    <meta http-equiv="content-language" content="en-us">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
@@ -335,7 +335,7 @@
     <!-- ======= End Footer ======= -->
 
     <a href="#" class="back-to-top"><i class="icofont-arrow-up"></i></a>
-    <div id="preloader"></div>
+    <!-- <div id="preloader"></div> -->
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
