Added Privacy Policy

--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@
                 <a href="https://twitter.com/sjsurobotics" target="_blank" class="twitter"><i
                     class="bx bxl-twitter"></i></a>
               </div>
+			  <a href="privacy_policy.html" style="font-size:10px" >Privacy Policy</a>
             </div>
           </div>
         </div>
