Foolhardy attempt at a small script

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
               <div class="info-box">
                 <i class="bx bx-down-arrow-alt"></i>
                 <h3>Want to Join?</h3>
-                <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank">Click Here</a>
+                <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank" onClick="gtag('event','sign_up')">Click Here</a>
               </div>
             </div>
 
