updates prior leads and current leads

--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,8 @@
 
   <title>SJSU Robotics - Gallery</title>
   <!-- Keep Description between 150-165 Charecters (including White Spaces)-->
-  <meta name="description" content="SJSU Robotics list of photo galleries and publications showing previous events that were participated in by members of the club.">
+  <meta name="description"
+    content="SJSU Robotics list of photo galleries and publications showing previous events that were participated in by members of the club.">
 
   <meta http-equiv="content-language" content="en-us">
 
@@ -41,21 +42,21 @@
 
   <!-- Analytics -->
   <script>
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i + "?ref=bwt";
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "991s0kxzf5");
   </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HF3368RYSS"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-  
+
     gtag('config', 'G-HF3368RYSS');
   </script>
-  
+
   <!-- =======================================================
   * Template Name: Dewi - v2.0.0
   * Template URL: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/
@@ -76,10 +77,12 @@
           <li class="drop-down">
             <a href="">Learn More</a>
             <ul>
-              <li><a href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles" target="_blank">Calendar</a></li>
+              <li><a
+                  href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles"
+                  target="_blank">Calendar</a></li>
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="pastLeads.html">Past Leads</a></li>
+              <li><a href="past-leads.html">Past Leads</a></li>
               <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
@@ -261,7 +264,7 @@
                 <a href="https://twitter.com/sjsurobotics" target="_blank" class="twitter"><i
                     class="bx bxl-twitter"></i></a>
               </div>
-			  <a href="privacy_policy.html" style="font-size:10px" >Privacy Policy</a>
+              <a href="privacy_policy.html" style="font-size:10px">Privacy Policy</a>
             </div>
           </div>
         </div>
