--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -40,21 +41,21 @@
 
   <!-- Analytics -->
   <script>
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i + "?ref=bwt";
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "991s0kxzf5");
   </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HF3368RYSS"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-  
+
     gtag('config', 'G-HF3368RYSS');
   </script>
-  
+
   <!-- =======================================================
   * Template Name: Dewi - v2.0.0
   * Template URL: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/
@@ -62,6 +63,7 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+
 <body>
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
@@ -74,10 +76,12 @@
           <li class="drop-down">
             <a href="">Learn More</a>
             <ul>
-              <li><a href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles" target="_blank">Calendar</a></li>
+              <li><a
+                  href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles"
+                  target="_blank">Calendar</a></li>
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="pastLeads.html">Past Leads</a></li>
+              <li><a href="past-leads.html">Past Leads</a></li>
               <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
@@ -95,55 +99,82 @@
     </div>
   </section>
   <!-- ======= End Home Section ======= -->
-	<main id="main">
-  <!-- ======= End Header Section ======= -->
-<h1>Privacy Policy for SJSU Robotics</h1>
+  <main id="main">
+    <!-- ======= End Header Section ======= -->
+    <h1>Privacy Policy for SJSU Robotics</h1>
 
-<p>At SJSU Robotics, accessible from sjsurobotics.org, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by SJSU Robotics and how we use it.</p>
+    <p>At SJSU Robotics, accessible from sjsurobotics.org, one of our main priorities is the privacy of our visitors.
+      This Privacy Policy document contains types of information that is collected and recorded by SJSU Robotics and how
+      we use it.</p>
 
-<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
+    <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact
+      us.</p>
 
-<h2>Log Files</h2>
+    <h2>Log Files</h2>
 
-<p>SJSU Robotics follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information. Our Privacy Policy was created with the help of the <a href="https://www.privacypolicygenerator.org">Privacy Policy Generator</a>.</p>
+    <p>SJSU Robotics follows a standard procedure of using log files. These files log visitors when they visit websites.
+      All hosting companies do this and a part of hosting services' analytics. The information collected by log files
+      include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp,
+      referring/exit pages, and possibly the number of clicks. These are not linked to any information that is
+      personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking
+      users' movement on the website, and gathering demographic information. Our Privacy Policy was created with the
+      help of the <a href="https://www.privacypolicygenerator.org">Privacy Policy Generator</a>.</p>
 
-<h2>Cookies and Web Beacons</h2>
+    <h2>Cookies and Web Beacons</h2>
 
-<p>Like any other website, SJSU Robotics uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
+    <p>Like any other website, SJSU Robotics uses 'cookies'. These cookies are used to store information including
+      visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used
+      to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other
+      information.</p>
 
-<p>For more general information on cookies, please read <a href="https://www.generateprivacypolicy.com/#cookies">"Cookies" article from the Privacy Policy Generator</a>.</p>
+    <p>For more general information on cookies, please read <a
+        href="https://www.generateprivacypolicy.com/#cookies">"Cookies" article from the Privacy Policy Generator</a>.
+    </p>
 
 
 
-<h2>Privacy Policies</h2>
+    <h2>Privacy Policies</h2>
 
-<p>You may consult this list to find the Privacy Policy for each of the advertising partners of SJSU Robotics.</p>
+    <p>You may consult this list to find the Privacy Policy for each of the advertising partners of SJSU Robotics.</p>
 
-<p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on SJSU Robotics, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
+    <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in
+      their respective advertisements and links that appear on SJSU Robotics, which are sent directly to users' browser.
+      They automatically receive your IP address when this occurs. These technologies are used to measure the
+      effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on
+      websites that you visit.</p>
 
-<p>Note that SJSU Robotics has no access to or control over these cookies that are used by third-party advertisers.</p>
+    <p>Note that SJSU Robotics has no access to or control over these cookies that are used by third-party advertisers.
+    </p>
 
-<h2>Third Party Privacy Policies</h2>
+    <h2>Third Party Privacy Policies</h2>
 
-<p>SJSU Robotics's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
+    <p>SJSU Robotics's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to
+      consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may
+      include their practices and instructions about how to opt-out of certain options. </p>
 
-<p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
+    <p>You can choose to disable cookies through your individual browser options. To know more detailed information
+      about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
 
-<h2>Children's Information</h2>
+    <h2>Children's Information</h2>
 
-<p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>
+    <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and
+      guardians to observe, participate in, and/or monitor and guide their online activity.</p>
 
-<p>SJSU Robotics does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
+    <p>SJSU Robotics does not knowingly collect any Personal Identifiable Information from children under the age of 13.
+      If you think that your child provided this kind of information on our website, we strongly encourage you to
+      contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
 
-<h2>Online Privacy Policy Only</h2>
+    <h2>Online Privacy Policy Only</h2>
 
-<p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in SJSU Robotics. This policy is not applicable to any information collected offline or via channels other than this website.</p>
+    <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards
+      to the information that they shared and/or collect in SJSU Robotics. This policy is not applicable to any
+      information collected offline or via channels other than this website.</p>
 
-<h2>Consent</h2>
+    <h2>Consent</h2>
 
-<p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
-	</main>
-	<!-- ======= Footer ======= -->
+    <p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
+  </main>
+  <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
@@ -162,7 +193,7 @@
                 <a href="https://twitter.com/sjsurobotics" target="_blank" class="twitter"><i
                     class="bx bxl-twitter"></i></a>
               </div>
-				<a href="privacy_policy.html" style="font-size:10px" >Privacy Policy</a>
+              <a href="privacy_policy.html" style="font-size:10px">Privacy Policy</a>
             </div>
           </div>
         </div>
@@ -180,8 +211,8 @@
     </div>
   </footer>
   <!-- ======= End Footer ======= -->
-	
-	<a href="#" class="back-to-top"><i class="icofont-arrow-up"></i></a>
+
+  <a href="#" class="back-to-top"><i class="icofont-arrow-up"></i></a>
   <!-- <div id="preloader"></div> -->
 
   <!-- Vendor JS Files -->
@@ -198,4 +229,5 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
