updates leads section w/ new itel sys and business leads

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-brain"></i>
-                  <span data-toggle="counter-up">0</span>
+                  <span data-toggle="counter-up">3</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -199,7 +199,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-dashboard-web"></i>
-                  <span data-toggle="counter-up">0</span>
+                  <span data-toggle="counter-up">1</span>
                   <p>Business</p>
                 </div>
               </div>
@@ -428,10 +428,10 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/empty.png" class="img-fluid" alt="" />
+                  <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
                 </div>
                 <div class="member-info">
-                  <h4></h4>
+                  <h4>Shveta Ram</h4>
                   <span>Business Lead</span>
                 </div>
               </div>
@@ -501,10 +501,10 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/empty.png" class="img-fluid" alt="" />
+                  <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="" />
                 </div>
                 <div class="member-info">
-                  <h4></h4>
+                  <h4>Adrien Carrou</h4>
                   <span>Intelligent Systems Lead</span>
                 </div>
               </div>
