updates lead pics, updates sponsor list, fixes leads description sizing

--- a/index.html
+++ b/index.html
@@ -305,42 +305,31 @@
 
         <row class="row">
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/SJSU-ENGR.png" class="img-fluid" alt="">
+            <img src="assets/img/sponsors/SJSU-ENGR.png" class="img-fluid" alt="San Jose State Engineering Department">
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/SJSU-AS.png" class="img-fluid" alt="">
+            <img src="assets/img/sponsors/SJSU-AS.png" class="img-fluid" alt="SJSU Associated Students">
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/google.png" class="img-fluid" alt="">
+            <img src="assets/img/sponsors/google.png" class="img-fluid" alt="Google">
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/BAC.png" class="img-fluid" alt="">
+            <img src="assets/img/sponsors/protocase.png" class="img-fluid" alt="Protocase">
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/protocase.png" class="img-fluid" alt="">
+            <img src="assets/img/sponsors/hamamatsu.png" class="img-fluid" alt="Hamamatsu">
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/diptrace.png" class="img-fluid" alt="">
+            <img src="assets/img/sponsors/industrial-metal-supply.png" class="img-fluid" alt="Industrial Metal Supply">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/solidworks.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/TMS.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/hamamatsu.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="">
+          <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="Kammace">
           </div>
         </row>
 
@@ -403,7 +392,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/santosh-dasari/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Santosh Dasari</h4>
@@ -415,7 +406,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/mattew-ard.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/mattheward/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/mattew-ard.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Matthew Ard</h4>
@@ -428,7 +421,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/shveta-ram-42357121b/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/shveta-ram.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Shveta Ram</h4>
@@ -440,7 +435,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/ashley-marie-mercurio.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/ashleym-mercurio/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/ashley-marie-mercurio.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Ashley Marie Mercurio</h4>
@@ -452,7 +449,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/marco-koch.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/marco-koch-011a031b1/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/marco-koch.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Marco Koch</h4>
@@ -465,7 +464,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/brandon-claveria.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/bclaveria/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/brandon-claveria.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Brandon Claveria</h4>
@@ -477,7 +478,10 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/corey-kelley.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/corey-kelley-a08623230/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Corey Kelley</h4>
@@ -489,7 +493,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/nathanael-garza.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/nathanaelrgarza/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/nathanael-garza.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Nathanael Garza</h4>
@@ -501,7 +507,9 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="" />
+                  <a href="https://www.linkedin.com/in/adrien-carrou/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="" />
+                  </a>
                 </div>
                 <div class="member-info">
                   <h4>Adrien Carrou</h4>
