updates styling and home page nav / landing screen

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="/">SJSU Robotics</a></h1>
+      <!-- <h1 class="logo"><a href="/">SJSU Robotics</a></h1> -->
 
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="/" class="logo"><img src="assets/img/favicon.png" alt="" class="img-fluid"></a> -->
+      <a href="/" class="logo active"><img src="assets/img/favicon.png" alt="" class="img-fluid">SJSU Robotics</a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -117,11 +117,11 @@
   <!-- ======= Home Section ======= -->
   <section id="home">
     <div class="home-container" data-aos="fade-up" data-aos-delay="150">
-      <h2 id="slogan">We are the San Jose State University Robotics Team.</h2>
+      <h1 id="slogan">SJSU Robotics</h1>
       <br>
       <a><img src="assets/img/favicon.png" alt="" class="img-fluid" width="150" height="146"></a>
       <br>
-      <h2 id="sub-slogan">A group of talented engineers.</h2>
+      <h2 id="sub-slogan">A group of students at San Jose State University</h2>
       <div class="d-flex">
         <a href="https://www.youtube.com/watch?v=shVuYxo-rjA" class="venobox btn-watch-video" data-vbtype="video"
           data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
