styling changes for border radius, updates about box images

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">Status</a></li>
+          <li><a href="#sponsors">Sponsors</a></li>
           <li><a href="#lead">Leads</a></li>
+          <li><a href="#contact">Contact</a></li>
           <li class="drop-down"><a href="">Learn More</a>
             <ul>
               <li><a href="competitions.html">Competitions</a></li>
@@ -105,7 +107,6 @@
               <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -253,11 +254,19 @@
 
               <div class="card-body">
                 <h5 class="card-title"><a>Who Can Join</a></h5>
-                <p class="card-text">The competitions we enter require the fields of Mechanical, Computer,
-                  Electrical, Chemical, Software, and Aerospace Engineering along with other STEM fields
-                  such as Computer Science, Geology, Chemistry, and Physics.
-                  Our Business team also looks for people with any kind of business or communications background.
-                  We accept students from all walks of engineering, science and business.
+                <p class="card-text">
+                  We welcome students from all majors and backgrounds to join our team. We are looking for students who
+                  are passionate about robotics and want to learn more about the field.
+                  We are also looking for students who are interested in working on a project that will take them out of
+                  their comfort zone and challenge them to think outside the box.
+                  We are looking for students who are willing to put in the time and effort to learn new skills and
+                  technologies.
+                  We are looking for students who are willing to work in a team environment and collaborate with others.
+                  We are looking for students who are willing to take on leadership roles and help others.
+                  We are looking for students who are willing to take on responsibility and be accountable for their
+                  actions.
+                  We are looking for students who are willing to be creative and innovative.
+                  We are looking for students who are willing to have fun and enjoy the process.
                 </p>
               </div>
             </div>
@@ -340,8 +349,10 @@
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
       <div class="container" data-aos="zoom-in">
-
         <div class="owl-carousel gallery-carousel">
+          <div class="gallery-item">
+            <img src="assets/img/gallery/gallery-0.jpeg" class="gallery-img" alt="">
+          </div>
 
           <div class="gallery-item">
             <img src="assets/img/gallery/gallery-1.jpeg" class="gallery-img" alt="">
@@ -363,9 +374,7 @@
             <img src="assets/img/gallery/gallery-5.jpeg" class="gallery-img" alt="">
 
           </div>
-
         </div>
-
       </div>
     </section>
     <!-- ======= End Gallery Section ======= -->
