--- a/past-leads.html
+++ b/past-leads.html
@@ -253,7 +253,7 @@
                       <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
                     </div>
                     <div class="member-info">
-                      <h4>Richard</h4>
+                      <h4>Richard Ngo</h4>
                       <span>Science Lead</span>
                     </div>
                   </div>
@@ -343,7 +343,7 @@
                       <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
                     </div>
                     <div class="member-info">
-                      <h4>Smurthi</h4>
+                      <h4>Smruthi Danda</h4>
                       <span>Treasurer</span>
                     </div>
                   </div>
@@ -368,7 +368,7 @@
                       <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
                     </div>
                     <div class="member-info">
-                      <h4>Richard</h4>
+                      <h4>Richard Ngo</h4>
                       <span>Science Lead</span>
                     </div>
                   </div>
@@ -393,7 +393,7 @@
                       <img src="assets/img/leads/default.png" class="img-fluid" alt="" />
                     </div>
                     <div class="member-info">
-                      <h4>Smurthi</h4>
+                      <h4>Smruthi Danda</h4>
                       <span>Electrical Lead</span>
                     </div>
                   </div>
