reorganizes homepage, updates gallery images, updates nav links style

--- a/competitions.html
+++ b/competitions.html
@@ -69,27 +69,21 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="/">SJSU Robotics</a></h1>
-
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
+          class="img-fluid">SJSU Robotics</a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="/">Home</a></li>
           <li class="drop-down">
             <a href="">Learn More</a>
             <ul>
-              <li>
-                <a href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles"
-                  target="_blank">Calendar</a>
-              </li>
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="past-leads.html">Past Leads</a></li>
-              <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
         </ul>
       </nav>
-      <!-- .nav-menu -->
     </div>
   </header>
   <!-- ======= End Header Section ======= -->
@@ -147,7 +141,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/gallery-3.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2018-competition.jpeg" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="member-info">
@@ -170,7 +164,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/gallery-4.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2017-competition.jpeg" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="member-info">
@@ -193,7 +187,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/gallery-5.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2016-competition.jpeg" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="member-info">
@@ -215,7 +209,7 @@
           <div class="member" data-aos="fade-up" data-aos-delay="100">
             <div class="pic">
               <div class="img-container">
-                <img src="assets/img/gallery/gallery-2.jpeg" class="img-fluid" alt="" />
+                <img src="assets/img/gallery/2015-competition.jpeg" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="member-info">
