--- a/gallery.html
+++ b/gallery.html
@@ -69,26 +69,21 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="/">SJSU Robotics</a></h1>
-
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
+          class="img-fluid">SJSU Robotics</a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="/">Home</a></li>
           <li class="drop-down">
             <a href="">Learn More</a>
             <ul>
-              <li><a
-                  href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles"
-                  target="_blank">Calendar</a></li>
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="past-leads.html">Past Leads</a></li>
-              <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
         </ul>
       </nav>
-      <!-- .nav-menu -->
     </div>
   </header>
   <!-- ======= End Header Section ======= -->
