--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -68,26 +68,21 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="/">SJSU Robotics</a></h1>
-
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt=""
+          class="img-fluid">SJSU Robotics</a>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="/">Home</a></li>
           <li class="drop-down">
             <a href="">Learn More</a>
             <ul>
-              <li><a
-                  href="https://calendar.google.com/calendar/embed?src=sjsurobotics%40gmail.com&ctz=America%2FLos_Angeles"
-                  target="_blank">Calendar</a></li>
               <li><a href="competitions.html">Competitions</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="past-leads.html">Past Leads</a></li>
-              <!-- <li><a href="volunteering.html">Volunteering</a></li> -->
             </ul>
           </li>
         </ul>
       </nav>
-      <!-- .nav-menu -->
     </div>
   </header>
   <!-- ======= End Header Section ======= -->
@@ -95,84 +90,97 @@
   <!-- ======= Home Section ======= -->
   <section id="homeLinks">
     <div class="home-container" data-aos="fade-up" data-aos-delay="150">
-      <h1>Privacy Policiy</h1>
+      <h1>Privacy Policy</h1>
     </div>
   </section>
   <!-- ======= End Home Section ======= -->
   <main id="main">
     <!-- ======= End Header Section ======= -->
-    <h1>Privacy Policy for SJSU Robotics</h1>
+    <div class="container" data-aos="fade-up">
+      <h1>Privacy Policy for SJSU Robotics</h1>
 
-    <p>At SJSU Robotics, accessible from sjsurobotics.org, one of our main priorities is the privacy of our visitors.
-      This Privacy Policy document contains types of information that is collected and recorded by SJSU Robotics and how
-      we use it.</p>
+      <p>At SJSU Robotics, accessible from sjsurobotics.org, one of our main priorities is the privacy of our visitors.
+        This Privacy Policy document contains types of information that is collected and recorded by SJSU Robotics and
+        how
+        we use it.</p>
 
-    <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact
-      us.</p>
+      <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to
+        contact
+        us.</p>
 
-    <h2>Log Files</h2>
+      <h2>Log Files</h2>
 
-    <p>SJSU Robotics follows a standard procedure of using log files. These files log visitors when they visit websites.
-      All hosting companies do this and a part of hosting services' analytics. The information collected by log files
-      include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp,
-      referring/exit pages, and possibly the number of clicks. These are not linked to any information that is
-      personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking
-      users' movement on the website, and gathering demographic information. Our Privacy Policy was created with the
-      help of the <a href="https://www.privacypolicygenerator.org">Privacy Policy Generator</a>.</p>
+      <p>SJSU Robotics follows a standard procedure of using log files. These files log visitors when they visit
+        websites.
+        All hosting companies do this and a part of hosting services' analytics. The information collected by log files
+        include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp,
+        referring/exit pages, and possibly the number of clicks. These are not linked to any information that is
+        personally identifiable. The purpose of the information is for analyzing trends, administering the site,
+        tracking
+        users' movement on the website, and gathering demographic information. Our Privacy Policy was created with the
+        help of the <a href="https://www.privacypolicygenerator.org">Privacy Policy Generator</a>.</p>
 
-    <h2>Cookies and Web Beacons</h2>
+      <h2>Cookies and Web Beacons</h2>
 
-    <p>Like any other website, SJSU Robotics uses 'cookies'. These cookies are used to store information including
-      visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used
-      to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other
-      information.</p>
+      <p>Like any other website, SJSU Robotics uses 'cookies'. These cookies are used to store information including
+        visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is
+        used
+        to optimize the users' experience by customizing our web page content based on visitors' browser type and/or
+        other
+        information.</p>
 
-    <p>For more general information on cookies, please read <a
-        href="https://www.generateprivacypolicy.com/#cookies">"Cookies" article from the Privacy Policy Generator</a>.
-    </p>
+      <p>For more general information on cookies, please read <a
+          href="https://www.generateprivacypolicy.com/#cookies">"Cookies" article from the Privacy Policy Generator</a>.
+      </p>
 
 
 
-    <h2>Privacy Policies</h2>
+      <h2>Privacy Policies</h2>
 
-    <p>You may consult this list to find the Privacy Policy for each of the advertising partners of SJSU Robotics.</p>
+      <p>You may consult this list to find the Privacy Policy for each of the advertising partners of SJSU Robotics.</p>
 
-    <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in
-      their respective advertisements and links that appear on SJSU Robotics, which are sent directly to users' browser.
-      They automatically receive your IP address when this occurs. These technologies are used to measure the
-      effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on
-      websites that you visit.</p>
+      <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used
+        in
+        their respective advertisements and links that appear on SJSU Robotics, which are sent directly to users'
+        browser.
+        They automatically receive your IP address when this occurs. These technologies are used to measure the
+        effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on
+        websites that you visit.</p>
 
-    <p>Note that SJSU Robotics has no access to or control over these cookies that are used by third-party advertisers.
-    </p>
+      <p>Note that SJSU Robotics has no access to or control over these cookies that are used by third-party
+        advertisers.
+      </p>
 
-    <h2>Third Party Privacy Policies</h2>
+      <h2>Third Party Privacy Policies</h2>
 
-    <p>SJSU Robotics's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to
-      consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may
-      include their practices and instructions about how to opt-out of certain options. </p>
+      <p>SJSU Robotics's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to
+        consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may
+        include their practices and instructions about how to opt-out of certain options. </p>
 
-    <p>You can choose to disable cookies through your individual browser options. To know more detailed information
-      about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
+      <p>You can choose to disable cookies through your individual browser options. To know more detailed information
+        about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
 
-    <h2>Children's Information</h2>
+      <h2>Children's Information</h2>
 
-    <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and
-      guardians to observe, participate in, and/or monitor and guide their online activity.</p>
+      <p>Another part of our priority is adding protection for children while using the internet. We encourage parents
+        and
+        guardians to observe, participate in, and/or monitor and guide their online activity.</p>
 
-    <p>SJSU Robotics does not knowingly collect any Personal Identifiable Information from children under the age of 13.
-      If you think that your child provided this kind of information on our website, we strongly encourage you to
-      contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
+      <p>SJSU Robotics does not knowingly collect any Personal Identifiable Information from children under the age of
+        13.
+        If you think that your child provided this kind of information on our website, we strongly encourage you to
+        contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
 
-    <h2>Online Privacy Policy Only</h2>
+      <h2>Online Privacy Policy Only</h2>
 
-    <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards
-      to the information that they shared and/or collect in SJSU Robotics. This policy is not applicable to any
-      information collected offline or via channels other than this website.</p>
+      <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards
+        to the information that they shared and/or collect in SJSU Robotics. This policy is not applicable to any
+        information collected offline or via channels other than this website.</p>
 
-    <h2>Consent</h2>
+      <h2>Consent</h2>
 
-    <p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
+      <p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
+    </div>
   </main>
   <!-- ======= Footer ======= -->
   <footer id="footer">
