updates sitemap last modified timestamp, adds recruitment tryout timeline

--- a/index.html
+++ b/index.html
@@ -561,31 +561,44 @@
               <div class="col-md-12">
 
                 <div class="info-box">
-                  <i class="bx bx-map"></i>
+                  <a href="https://www.google.com/maps/dir//Charles+W.+Davidson+College+of+Engineering,+1+Washington+Square,+San+Jose,+CA+95192/@37.337644,-121.9517736,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x808fccbf9c49ae69:0x33714fc7762af269!2m2!1d-121.8817336!2d37.3376646"
+                    target="_blank">
+                    <i class="bx bx-map"></i>
+                  </a>
                   <h3>General Meetings</h3>
                   <p>San Jose State University</p>
                   <p>Saturday 12pm to 2pm</p>
                   <a href="https://www.google.com/maps/dir//Charles+W.+Davidson+College+of+Engineering,+1+Washington+Square,+San+Jose,+CA+95192/@37.337644,-121.9517736,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x808fccbf9c49ae69:0x33714fc7762af269!2m2!1d-121.8817336!2d37.3376646"
-                    target="_blank">Room : ENGR 141</a><br>
+                    target="_blank">
+                    Room : ENGR 141
+                  </a>
+                  <br>
                 </div>
                 <br>
               </div>
 
               <div class="col-md-12" style="margin-bottom: 25px;">
                 <div class="info-box">
-                  <i class="bx bx-envelope"></i>
+                  <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sjsurobotics@gmail.com" target="_blank">
+                    <i class="bx bx-envelope"></i>
+                  </a>
                   <h3>Email Us</h3>
-                  <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sjsurobotics@gmail.com"
-                    target="_blank">sjsurobotics@gmail.com</a>
+                  <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sjsurobotics@gmail.com" target="_blank">
+                    sjsurobotics@gmail.com
+                  </a>
                 </div>
               </div>
 
               <div class="col-md-12">
                 <div class="info-box">
-                  <i class="bx bx-edit"></i>
+                  <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank" onClick="gtag('event','sign_up')">
+                    <i class="bx bx-edit"></i>
+                  </a>
                   <h3>Want to Join?</h3>
-                  <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank" onClick="gtag('event','sign_up')">Sign
-                    Up Here</a>
+                  <p>Tryouts held every fall semester</p>
+                  <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank" onClick="gtag('event','sign_up')">
+                    Sign Up Form
+                  </a>
                 </div>
               </div>
 
